# src/apps/ecom/backend/controllers/index.ts
@@ -8,3 +8,4 @@ export * from "./admin/admin-create-product.controller"
 export * from "./products/get-all-products.controller"
 export * from "./products/get-product-by-id.controller"
 export * from "./products/get-all-categories.controller"
+export * from "./products/get-products-by-category.controller"
